tests/snapshots/examples_fixtures/functions__closure_outer_assign_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/closure_outer_assign_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E003]: OUTER ASSIGNMENT

Cannot assign to variable `x` from outer scope.

  --> examples/functions/closure_outer_assign_error.flx:5:7
  |
5 |       x = 2;
  |       ^^^^^^

Hint:
  Variables captured by closures cannot be reassigned. Return the updated value from the function or bind it to a new name.
== stdout ==
<not executed>
